--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "test_new",
-  "version": "1.0.0",
   "scripts": {
-    "minify-css": "mkdir -p build/dist/css && npx uglifycss build/src/css/style.css > build/dist/css/style.min.css",
-    "minify-js": "mkdir -p build/dist/js && npx uglifyjs build/src/js/scripts.js -o build/dist/js/scripts.min.js",
-    "build": "npm run minify-css && npm run minify-js"
+    "minify-js": "uglifyjs build/src/js/*.js -o build/dist/js/app.min.js",
+    "minify-css": "cleancss build/src/css/*.css -o build/dist/css/style.min.css"
   },
   "devDependencies": {
     "uglify-js": "^3.14.5",
-    "uglifycss": "^0.0.29"
+    "clean-css-cli": "^5.3.2"
   }
 }
