--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-
+      
+    - name: Install Dependencies
+      run: npm install @cloudflare/workers-kv
+    
     - name: Build project
       run: npm run build
       
