--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install dependencies
       run: npm install
       
-    - name: Install Dependencies
-      run: npm install @cloudflare/workers-kv
+    - name: Install Dependencies v2
+      run: npm install -g @cloudflare/workers-kv
     
     - name: Build project
       run: npm run build
