--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,6 +6,10 @@ zone_id = "fec2bdb9b6cb3f5f0de71ec2208c999c"
 route = "https://test-new.santosh-2c2.workers.dev/*"
 compatibility_date = "2024-07-05"
 
+kv_namespaces = [
+  { binding = "KEY_KV", id = "123456789" }
+]
+
 [site]
 bucket = "./build/dist"
 entry-point = "workers-site"
