--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "scripts": {
-    "build": "gulp build",
-    "minify-css": "gulp minify-css",
-    "uglify-js": "gulp uglify-js",
-    "gzip": "gulp gzip",
-    "deploy": "wrangler publish"
+    "uglify-js": "mkdir -p build/dist/js && npx uglify-js src/js/*.js -o build/dist/js/scripts.min.js",
+    "minify-css": "mkdir -p build/dist/css && npx cleancss src/css/*.css -o build/dist/css/style.min.css",
+    "gzip-js": "npx gzip-cli build/dist/js/scripts.min.js -o build/dist/js/scripts.min.js.gz",
+    "gzip-css": "npx gzip-cli build/dist/css/style.min.css -o build/dist/css/style.min.css.gz",
+    "build": "npm run uglify-js && npm run minify-css && npm run gzip-js && npm run gzip-css && npm run copy-to-repo",
+    "copy-to-repo": "cp -r build/dist/* ."
   },
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp-gzip": "^1.4.2"
+    "uglify-js": "^3.14.5",
+    "clean-css-cli": "^5.3.2",
+    "gzip-cli": "^1.0.1"
   }
 }
