--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Build project
         run: npm run build
+        
+      - name: List build files
+        run: ls -R ./build/dist
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/pages-action@v1
