--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,18 @@ jobs:
 
       - name: Build project
         run: npm run build
-        
-      - name: List build files
-        run: ls -R ./build/dist
+
+      - name: Verify build output
+        run: |
+          echo "Listing build/dist contents:"
+          ls -R ./build/dist
+          echo "Build verification complete."
+
+      - name: Print minified JS content
+        run: cat ./build/dist/js/scripts.min.js
+
+      - name: Print minified CSS content
+        run: cat ./build/dist/css/style.min.css
 
       - name: Deploy to Cloudflare Pages
         uses: cloudflare/pages-action@v1
